--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 /*Variables*/
 @font-face {
 	font-family: "PT Sans";
-	src: url("Fonts/PTSans-regular.ttf");
+	src: url("Fonts/PTSans-Regular.ttf");
 }
 
 /*general: recurring, wide classes*/
