--- a/un/index.css
+++ b/un/index.css
@@ -1,7 +1,7 @@
 /*Variables*/
 @font-face {
 	font-family: "PT Sans";
-	src: url(../fonts/PTSans-Regular.ttf);
+	src: url("../Fonts/PTSans-Regular.ttf");
 }
 
 /*===================================================*/
